Update tester to normalise everything to UTF-8
Multiple encodings aren't what we are testing here. The indexer + a
new process should help with that. Or maybe I need to suck it up and
write that xml differ for real.

--- a/tester/ctester/Makefile
+++ b/tester/ctester/Makefile
@@ -1,7 +1,9 @@
-CFLAGS=-O2 -g -std=c11 -Wall -Wextra -Wno-missing-field-initializers
+CFLAGS=-O2 -g -std=c11 -Wall -Wextra -Wno-missing-field-initializers \
+	-D_POSIX_C_SOURCE=200809L
 
-binaries = ctester testbuilder encfixer encextractor indexer nlfix nohigh normaliser
-testers = nlfix-test
+# posix is for getline and strdup. get rid of them maybe?
+
+binaries = ctester testbuilder encfixer encextractor indexer nohigh normaliser
 
 all: $(binaries)
 
@@ -14,13 +16,9 @@ indexer: LDLIBS+=`pkg-config --libs   expat sqlite3` -lmagic
 testbuilder: CFLAGS+=`pkg-config --cflags libxml-2.0 expat`
 testbuilder: LDLIBS+=`pkg-config --libs   libxml-2.0 expat`
 
-nlfix-test: CFLAGS+=-DREAD_SIZE=16
-nlfix-test: nlfix.c
-	$(CC) $(CPPFLAGS) $(CFLAGS) -o $@ nlfix.c
-
 normaliser: CFLAGS+=`pkg-config --cflags libxml-2.0 expat`
 normaliser: LDLIBS+=`pkg-config --libs   libxml-2.0 expat`
 
 clean:
-	rm -f $(binaries) $(testers)
+	rm -f $(binaries)
 
