--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         # Allocation test fails on 1.15, but works on 1.16. Disabling 1.15 for
         # now.
-        go_version: ["1.14", "1.16"]
+        go_version: ["1.14", "1.16", "1.17"]
         os: [ubuntu-latest, windows-latest, macOS-latest]
     
     steps:
