--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,9 +7,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        go_version:
+        - "1.14"
         # Allocation test fails on 1.15, but works on 1.16. Disabling 1.15 for
         # now.
-        go_version: ["1.14", "1.16", "1.17"]
+        - "1.16"
+        - "1.17"
         os: [ubuntu-latest, windows-latest, macOS-latest]
     
     steps:
