--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,10 @@ jobs:
         # now.
         - "1.16"
         - "1.17"
+        - "1.18"
+        - "1.19"
+        # Quotes are important: 1.20 is not 1.2
+        - "1.20"
         os: [ubuntu-latest, windows-latest, macOS-latest]
     
     steps:
